--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,67 @@
-# Check that syntax is correct
+# Check the syntax, semantics and layout of DDLm dictionaries
 
-name: CIFSyntaxandStyleCheck
+name: CIF Syntax and Style Check
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Controls when the action will run. Triggers the workflow on push or pull
+# request events but only for the main branch
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
     paths-ignore:
-            - '.github/**'
+      - '.github/**'
 
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
     paths-ignore:
-            - '.github/**'
-  workflow_dispatch:   
+      - '.github/**'
+
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   syntax:
-    # The type of runner that the job will run on
+    name: Syntax
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-        - name: checkout
-          uses: actions/checkout@v4
-          
+      - name: Checkout
+        uses: actions/checkout@v4
+
       # Check syntax of all CIF files
-        - name: check_syntax
-          uses: COMCIFS/cif_syntax_check_action@master
-          id: cif_syntax_check
-  ddlm:
+      - name: Check CIF syntax
+        uses: COMCIFS/cif_syntax_check_action@master
+        id: cif_syntax_check
+
+  semantics:
+    name: Semantics
     runs-on: ubuntu-latest
     needs: syntax
+
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Checkout the DDLm reference dictionary
+        uses: actions/checkout@v4
+        with:
+          repository: COMCIFS/DDLm
+          path: cif-dictionaries/DDLm
+
+      - name: Checkout enumeration templates
+        uses: actions/checkout@v4
+        with:
+          repository: COMCIFS/Enumeration_Templates
+          path: cif-dictionaries/Enumeration_Templates
+
+      - name: Checkout attribute templates
+        uses: actions/checkout@v4
+        with:
+          repository: COMCIFS/Attribute_Templates
+          path: cif-dictionaries/Attribute_Templates
 
       - name: Checkout the coreCIF dictionary
         uses: actions/checkout@v4
@@ -45,12 +69,12 @@ jobs:
           repository: COMCIFS/cif_core
           path: cif-dictionaries/cif_core
 
-      - name: Checkout the multiblock coreCIF dictionary
+      - name: Checkout the multiblockCIF dictionary
         uses: actions/checkout@v4
         with:
           repository: COMCIFS/MultiBlock_Dictionary
           path: cif-dictionaries/MultiBlock_Dictionary
 
-      - name: check_ddlm
+      - name: Run dictionary validity checks
         uses: COMCIFS/dictionary_check_action@main
         id: ddlm_check
